<resources>
    <string name="app_name">Bibliotheque</string>
    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be 4 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="remember_me">Remember me</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
